--- a/README
+++ b/README
@@ -18,10 +18,10 @@ set-variable -name DISPLAY -value 10.1.83.116:0.0
 # Two directories needs to be linked:
 # \datain\ should be mapped to the data directory where the memmap files
 # \model\ should be mapped to the directory where the model weights are stored
-# \dataout\ should be mapped to the directory where the memmap files are located
+# \datawork\ should be mapped to the directory where the workfiles are located
 
 
-docker run -it --name crimacwp4-unet -p 8989:8989 -v D:\DATA\LSSS-label-versioning\S2016837\ACOUSTIC\LSSS\WORK\:/datawork/ -v D:\DATA\LSSS-label-versioning\S2016837\ACOUSTIC\memmap:/datain/ -e DISPLAY=$DISPLAY crimacwp4-unet:test
+docker run -it --name crimacwp4-unet -p 8989:8989 -v D:\DATA\LSSS-label-versioning\S2016837\ACOUSTIC\LSSS\WORK\:/datawork/ -v D:\DATA\LSSS-label-versioning\S2016837\ACOUSTIC\memmap:/datain/ -v D:\DATA\LSSS-label-versioning\modelweights:/model/ -e DISPLAY=$DISPLAY crimacwp4-unet:test
 
 # List containers
 docker ps --all
